--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,19 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.17.1",
+    "argon2-cffi>=25.1.0",
     "dotenv>=0.9.9",
     "fastapi>=0.120.1",
+    "passlib[bcrypt]>=1.7.4",
+    "psycopg2-binary>=2.9.11",
+    "python-dotenv>=1.1.1",
+    "python-jose[cryptography]>=3.5.0",
+    "python-multipart>=0.0.20",
     "requests>=2.32.5",
+    "sqlalchemy>=2.0.44",
     "streamlit>=1.50.0",
+    "uvicorn>=0.38.0",
 ]
 
 [tool.uv.workspace]
